# django_html_xml_validator

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml
django_html_xml_validator/: __init__.py  decorators.py  middleware.py
scripts/: update_dependencies.sh
tests/: settings.py  test_middleware.py
